# mFastAPI

./: .gitignore  database.py  main.py  models.py  pyproject.toml  schema.py  sql_app.db
